ページネーション機能を実装 #17

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -95,3 +95,20 @@ ja:
       not_saved:
         one: "エラーが発生したため %{resource} は保存されませんでした:"
         other: "%{count} 件のエラーが発生したため %{resource} は保存されませんでした:"
+
+  views:
+    pagination:
+      first: "&laquo; 最初"
+      last: "最後 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
+    helpers:
+      page_entries_info:
+        one_page:
+          display_entries:
+            zero: ""
+            one: "<strong>1-1</strong>/1件中"
+            other: "<strong>1-%{count}</strong>/%{count}件中"
+        more_pages:
+          display_entries: "<strong>%{first}-%{last}</strong>/%{total}件中"
